# BEngine

./: .gitignore  CMakeLists.txt  Directory.build.props  Game.sln  LICENCE  README.md  asset-manifest.json  index.html
.android/TBB_BUILD/: settings.gradle
.android/TBB_BUILD/app/: build.gradle
.android/TBB_BUILD/app/src/main/: AndroidManifest.xml
.android/TBB_BUILD/app/src/main/assets/: vert.spv
.android/TBB_BUILD/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pizda.h
.android/TBB_BUILD/app/src/main/cpp/bullet3-3.17/: CMakeLists.txt
.android/TBB_BUILD/app/src/main/cpp/bullet3-3.17/Extras/BulletRobotics/: CMakeLists.txt
.android/TBB_BUILD/app/src/main/cpp/bullet3-3.17/Extras/BulletRoboticsGUI/: CMakeLists.txt
.android/TBB_BUILD/app/src/main/cpp/bullet3-3.17/src/LinearMath/: btThreads.cpp
.android/TBB_BUILD/app/src/main/cpp/oneTBB-master/: CMakeLists.txt
.android/TBB_BUILD/app/src/main/cpp/oneTBB-master/test/tbbmalloc/: test_malloc_overload.cpp
.android/TBB_BUILD/app/src/main/jniLibs/arm64-v8a/BulletCollision/: CTestTestfile.cmake
.android/TBB_BUILD/app/src/main/jniLibs/arm64-v8a/BulletDynamics/: CTestTestfile.cmake
.android/TBB_BUILD/app/src/main/jniLibs/arm64-v8a/LinearMath/: CTestTestfile.cmake
.android/TBB_BUILD/app/src/main/res/: sh.bat
.android/TBB_BUILD/app/src/main/res/layout/: activity_main.xml
.android/TBB_BUILD/app/src/main/res/shaders/: frag.spv  shader.frag
.android/TBB_BUILD/app/src/main/res/values/: strings.xml  themes.xml
.android/TBB_BUILD/app/src/main/res/values-night/: themes.xml
.android/TBB_BUILD/gradle/wrapper/: gradle-wrapper.properties
Android1/Android1.NativeActivity/: Android1.NativeActivity.vcxproj  main.cpp  pch.h
Android1/Android1.Packaging/: Android1.Packaging.androidproj
BEbraTests/: BEbraTests.vcxproj  GlobalState.hpp  packages.config  pch.h  readFrag.spv  readVert.spv  test.cpp  writeFrag.spv  writeVert.spv
BEbraTests/Models/: BOX_NAXYU.fbx  Box.fbx  HighSphere.fbx
BebraAndroid/: BebraAndroid.cpp  BebraAndroid.h  BebraAndroid.vcxproj  BebraAndroid.vcxproj.filters  pch.h
Editor/Editor/: App.xaml  App.xaml.cs  Editor.csproj  Editor.sln  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  _Imports.razor
Editor/Editor/Data/: WeatherForecast.cs  WeatherForecastService.cs
Editor/Editor/Pages/: FetchData.razor
Editor/Editor/Shared/: NavMenu.razor
Editor/Editor/wwwroot/: index.html
Editor/editor/: package-lock.json  package.json
Editor/editor/.erb/dll/: renderer.dev.dll.js
Editor/editor/src/renderer/: App.tsx
Include/GLFW/: glfw3native.h
Include/SDL/: SDL_stdinc.h
Include/oneapi/: tbb.h
Include/oneapi/tbb/: concurrent_hash_map.h  concurrent_vector.h  parallel_reduce.h  parallel_scan.h  tbb_allocator.h
Include/tbb/: parallel_for.h
bebra_editor/bebra_editor/: App.tsx  app.json  package-lock.json  package.json
bebra_editor/bebra_editor/windows/: bebra_editor.sln
bebra_editor/bebra_editor/windows/bebra_editor/: App.cpp  App.h  App.idl  App.xaml  Jopa.hpp  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  ReactPackageProvider.cpp  ReactPackageProvider.h  bebra_editor.vcxproj
headers/: AbstractRender.hpp  AngelScript.hpp  AngelScriptEngine.hpp  AsyncTask.hpp  AudioSystem.hpp  BaseRenderWindow.hpp  BaseScript.hpp  BaseScriptEngine.hpp  Camera.hpp  Collider.hpp  ColliderFactory.hpp  CommandBuffer.hpp  CommandPool.hpp  CreateInfoStructures.hpp  Debug.hpp  DebugUI.hpp  DescriptorPool.hpp  DescriptorSetLayouts.hpp  Engine.hpp  ExecuteQueues.hpp  GameComponent.hpp  GameComponentCreateInfo.hpp  GameComponentDestroyer.hpp  GameObject.hpp  GameObjectFactory.hpp  IRenderBufferPool.hpp  IRenderData.hpp  IRenderObjectFactory.hpp  ITextureFactory.hpp  IVisitorGameComponentDestroyer.hpp  Input.hpp  Math.hpp  MeshFactory.hpp  Model.hpp  Network.hpp  ObjectFactoryFacade.hpp  Physics.hpp  PythonEngine.hpp  PythonScript.hpp  Quaternion.hpp  (+24 more)
site/bebra-engine/: package-lock.json  package.json
site/bebra-engine/src/: App.css  App.tsx
src/: AbstractComponent.hpp  AbstractRender.hpp  AbstractRender.ixx  AbstractRenderSystem.cpp  AbstractRenderSystem.hpp  AbstractScriptObject.cpp  AbstractScriptObject.hpp  AllocationStrategy.ixx  AngelScript.cpp  AngelScript.cxx  AngelScript.hpp  AngelScript.ixx  AngelScriptEngine.cpp  AngelScriptEngine.hpp  AngelScriptEngine.ixx  AngelScript_impl.ixx  Asset.ixx  AssetsStore.cxx  AssetsStore.ixx  AsyncTask.cpp  AsyncTask.hpp  AudioSystem.cpp  BEbraEngine.hpp  BaseRenderWindow.cpp  BaseRenderWindow.h  BaseRenderWindow.hpp  BaseRenderWindow.ixx  BaseRenderWindow_Desktop.cpp  BaseRenderWindow_Mobile.cpp  BaseScript.hpp  BaseScript.ixx  BaseScriptEngine.hpp  BaseScriptEngine.ixx  BaseVulkanRender.cpp  BaseVulkanRender.hpp  BitMap.ixx  CGameComponentDestroyer.ixx  CRender.ixx  CRenderAllocator.ixx  CRenderObjectFactory.ixx  (+370 more)
src/AS_DEBUG/: __Start.txt  __Update.txt  ___init_obj.txt  __main.txt  stats.txt
src/ImGui/: imgui.cpp  imgui_internal.h
src/ImGui/imgui-1.83/backends/: imgui_impl_vulkan.h
src/Models/: BOX.fbx  BOX_NAXYU.fbx  Cylinder.fbx  Sphere.fbx  ignat.fbx
src/lua/: lua52.lib
src/lua/LuaBridge-2.6/Source/LuaBridge/: LuaBridge.h
src/lua/LuaBridge-2.6/Source/LuaBridge/detail/: LuaHelpers.h  Stack.h
src/scripts/: BEbraCore.js  BEbraEngine.as  KEY_CODE.as  hello_world.cs  hello_world.js  setup.json  test.as
src/scripts/BEbraEngine/: BEbraEngine.csproj  hello_world.cs
src/scripts/BEbraEngine/Properties/: AssemblyInfo.cs
src/shaders/: Line.frag  Line.vert  frag.spv  readFrag.spv  sh.bat  shader.frag  shader.vert  shaderRead.frag  shaderRead.vert  shaderWrite.frag  shaderWrite.vert  vert.spv
static/css/: main.cdc2df30.css  main.cdc2df30.css.map
static/js/: 787.951124fb.chunk.js  787.951124fb.chunk.js.map  main.0895aa1a.js  main.0895aa1a.js.map  main.713ca427.js  main.713ca427.js.map  main.77f7f29d.js  main.77f7f29d.js.map  main.9126fe10.js  main.9126fe10.js.map  main.fb96532a.js  main.fb96532a.js.map
(+12 files in other folders)
